--- a/LPG/LPG.csproj
+++ b/LPG/LPG.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValvesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ValvesForm.Designer.cs">
+      <DependentUpon>ValvesForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BaseControl.resx">
       <DependentUpon>BaseControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ValvesForm.resx">
+      <DependentUpon>ValvesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
